# application_bd

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst  modules.rst  src.features.rst
mlruns/0/: meta.yaml
mlruns/0/255cf4c556a94510bcf4f260203cd9e3/: meta.yaml
mlruns/0/523509db55004aa58bf7e12226474c32/: meta.yaml
mlruns/0/5c1cbea952164f0ab39aab91c98e7a62/: meta.yaml
mlruns/0/63105597f21f4e8ebd4e03a992d79cdd/: meta.yaml
mlruns/0/6e7d3bfc3e174e93b3eeb138b90c54a3/: meta.yaml
mlruns/0/ac0a34dbf08345d3bc37563b6ae2b700/: meta.yaml
mlruns/0/e6c135211e8a47bf8299fc117852b700/: meta.yaml
mlruns/0/e97226124d144d12a0a6009c3429b860/: meta.yaml
models/: metadata.pickle
models/0.0.1/: rf_metrics.pickle  xgboostclassifier.pickle  xgboostclassifier_metrics.pickle
models/0.0.2/: rf_metrics.json
models/0.0.2/gmb/: gmb_metrics.json  predictions.csv
models/0.0.2/rf/: predictions.csv
models/0.0.2/xgboost/: predictions.csv  xgboost_metrics.json
models/0.0.2/xgboostClassifier/: predictions.csv  xgboostclassifier.pickle  xgboostclassifier_metrics.json
reports/: CARAYON_SPATZ_Report.md
src/: MLproject  main.py  tracker.py  utilities.py  utils.py  var_env.py
src/data/: make_dataset.py
src/features/: build_features.py
src/mlruns/0/: meta.yaml
src/models/: model_parameters.py  predict_model.py  train_model.py
src/visualization/: do_explicability_h2o.py  do_explicability_xgboost.py
visualisation/xgboost/: explainer.pickle
(+120 files in other folders)
